src/objects/One_Click_Originator__c.object
<CustomObject>
    <fields>
        <fullName>Agency_Broker_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Agency/Broker Name</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Franchise_Code__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Franchise Code</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>General_Agency__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>General Agency</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Number</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Inactive_Status__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Originator_Role__c</fullName>
        <label>Originator Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>OST Broker</fullName>
                </value>
                <value>
                    <fullName>OST Claim Rep</fullName>
                </value>
                <value>
                    <fullName>OST Client Management</fullName>
                </value>
                <value>
                    <fullName>OST Customer Service</fullName>
                </value>
                <value>
                    <fullName>OST DAM</fullName>
                </value>
                <value>
                    <fullName>OST DCSM</fullName>
                </value>
                <value>
                    <fullName>OST Employer</fullName>
                </value>
                <value>
                    <fullName>OST FAM</fullName>
                </value>
                <value>
                    <fullName>OST Implementation Manager</fullName>
                </value>
                <value>
                    <fullName>OST Manager</fullName>
                </value>
                <value>
                    <fullName>OST Market Solutions</fullName>
                </value>
                <value>
                    <fullName>OST SAE</fullName>
                </value>
                <value>
                    <fullName>OST Sales</fullName>
                </value>
                <value>
                    <fullName>OST Sr. Management</fullName>
                </value>
                <value>
                    <fullName>OST Team Lead</fullName>
                </value>
                <value>
                    <fullName>Claim Rep</fullName>
                    <isActive>false</isActive>
                    <label>Claim Rep</label>
                </value>
                <value>
                    <fullName>Client Management</fullName>
                    <isActive>false</isActive>
                    <label>Client Management</label>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                    <isActive>false</isActive>
                    <label>Customer Service</label>
                </value>
                <value>
                    <fullName>DAM</fullName>
                    <isActive>false</isActive>
                    <label>DAM</label>
                </value>
                <value>
                    <fullName>FAM</fullName>
                    <isActive>false</isActive>
                    <label>FAM</label>
                </value>
                <value>
                    <fullName>Implementation Manager</fullName>
                    <isActive>false</isActive>
                    <label>Implementation Manager</label>
                </value>
                <value>
                    <fullName>Manager</fullName>
                    <isActive>false</isActive>
                    <label>Manager</label>
                </value>
                <value>
                    <fullName>Market Solutions</fullName>
                    <isActive>false</isActive>
                    <label>Market Solutions</label>
                </value>
                <value>
                    <fullName>SAE</fullName>
                    <isActive>false</isActive>
                    <label>SAE</label>
                </value>
                <value>
                    <fullName>Sales</fullName>
                    <isActive>false</isActive>
                    <label>Sales</label>
                </value>
                <value>
                    <fullName>Team Lead</fullName>
                    <isActive>false</isActive>
                    <label>Team Lead</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Originator_Type__c</fullName>
        <label>Originator Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Agency/Broker</fullName>
                </value>
                <value>
                    <fullName>General Agent</fullName>
                </value>
                <value>
                    <fullName>Group Contact</fullName>
                </value>
                <value>
                    <fullName>Internal UHG Employee</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
                <value>
                    <fullName>Other Originator</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_Originator_Type__c</fullName>
        <label>Other Originator Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Other_Admin_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Ext__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone Ext</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Policy_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Policy Number</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reward_Account_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Reward Account Number</label>
        <length>90</length>
        <type>Text</type>
    </fields>
    <label>One Click Originator</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>One Click Originator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>One Click Originators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>